--- a/src/app/conta/conta.component.html
+++ b/src/app/conta/conta.component.html
@@ -1,6 +1,7 @@
 <div>
     <p class="titulo-contas">CONTAS</p>
-    <div *ngFor="let conta of lsContas">
+    <!-- <div *ngFor="let despesa of lsDespesas"> -->
+    <div *ngFor="let conta of lsContas ">
         <div class="card-conta">
             <div class="header-card-conta">
                 <div>
@@ -17,13 +18,14 @@
                 </div>
                 <div>
                     <p id="tres">Despesas</p>
-                    <p id="quatro">{{conta.saldo | currency: 'BRL'}}</p>
+                    <p id="quatro">xxx</p>
                 </div>
             </div>
             <div class="saldo-conta">
                 <p id="um">Saldo:</p>
-                <p id="dois">{{conta.saldo | currency: 'BRL'}}</p>
+                <p id="dois">xxx</p>
             </div>
         </div>
     </div>
+    <!-- </div> -->
 </div>
