--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -98,7 +98,7 @@
             </div>
             <div class="modal-footer ">
                 <button type="button " class="btn btn-secondary " data-bs-dismiss="modal ">Cancelar</button>
-                <button type="button " class="btn btn-primary" (click)="criarConta()">Salvar</button>
+                <button type="button " class="btn btn-primary" data-bs-dismiss="modal" (click)="criarConta()">Salvar</button>
             </div>
         </div>
     </div>
