ajustes conexao db

--- a/src/app/conta/conta.component.html
+++ b/src/app/conta/conta.component.html
@@ -1,7 +1,9 @@
 <div>
     <p class="titulo-contas">CONTAS</p>
     <!-- <div *ngFor="let despesa of lsDespesas"> -->
+    <p>{{lsContas}}</p>
     <div *ngFor="let conta of lsContas ">
+
         <div class="card-conta">
             <div class="header-card-conta">
                 <div>
