--- a/src/app/cartao-credito/cartao-credito.component.html
+++ b/src/app/cartao-credito/cartao-credito.component.html
@@ -1,6 +1,114 @@
-<a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#modalCartao" data-bs-whatever="@mdo">
-    <button type="button" class="btn btn-outline-primary btn-size-add-cc">+</button>
-</a>
+<div class="container">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
+        <div class="col card-cc">
+            <a class="btn-add-cc" data-bs-toggle="modal" data-bs-target="#modalCartao" data-bs-whatever="@mdo">
+                <button type="button" class="btn btn-outline-primary btn-size-add-cc">+</button>
+            </a>
+        </div>
+        <div *ngFor="let cc of listCartoes" class="col card-cc">
+            <div class="card ">
+                <div class="card-body">
+                    <img class="img-bandeira-cartao" src="/assets/images/bandeiraCartoes/{{$any(cc).bandeira}}.png" alt="">
+                    <h5 class="card-title">{{$any(cc).nome}}</h5>
+                    <p>{{$any(cc)._id}}</p>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a (click)="abrirModalAddDespesaCC($any(cc).bandeira,$any(cc)._id)" data-bs-toggle="modal" data-bs-target="#modalCartao" data-bs-whatever="@mdo" class="card-link">Adicionar despesa</a>
+                    <!-- <a href="#" class="card-link">Another link</a> -->
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- MODAL CRIAR DESPESA CARTAO -->
+<div id="modal" id="modalDespesaCC" class="modal fade modal-fullscreen-md-down" id="modalCartao" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Nova despesa - {{bandeira}}</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form [formGroup]="formadicionarDespesaCC">
+                    <label for="conta-saldo">Valor:</label>
+                    <input type="text" id="conta-saldo" class="form-control" formControlName="valor">
+                    <div class="row">
+                        <div class="mb-3 col ">
+                            <label for="conta-name " class="col-form-label">Descrição:</label>
+                            <textarea type="text " class="form-control " id="conta-name " formControlName="descricao"></textarea>
+                        </div>
+                        <div class="mb-3 col ">
+                            <label for="conta-name " class="col-form-label">Data de vencimento  :</label>
+                            <input type="date" class="form-control " id="conta-name " formControlName="dataVencimento">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="mb-3 col ">
+                            <label class="form-check-label col-form-label" for="flexCheckDefault">Fixa:</label>
+                            <input class="form-check-input mt-3 margin-right " type="checkbox" value="" id="flexCheckDefault" formControlName="fixa">
+                        </div>
+                        <div class="mb-3 col ">
+                            <label for="conta-instituicao " class="col-form-label ">Status:</label>
+                            <select type="select " class="form-control form-select " id="conta-instituicao " formControlName="status">
+                              <option selected>Selecione</option>
+                              <option selected>Paga</option>
+                              <option selected>Pendente</option>
+                              <option selected>Vencida</option>
+
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row ">
+                        <div class="mb-3 col ">
+                            <label for="conta-tipo " class="col-form-label ">Repetir:</label>
+                            <input class="form-control mt-3 margin-right " type="number" placeholder="1" value="" id="" formControlName="repetir">
+                        </div>
+                        <div class="mb-3 col ">
+                            <label for="message-text " class="col-form-label ">Período:</label>
+                            <select type="select " class="form-control form-select " id="periodo" formControlName="periodo">
+                            <option selected>Selecione</option>
+                            <option value="Dias">Dias</option>
+                            <option value="Dias">Semanas</option>
+                            <option value="Mes">Meses</option>
+                            <option value="Trimestre">Trimestre</option>
+                            <option value="Semestre">Semestre</option>
+                            <option value="Anual">Anual</option>
+                          </select>
+                        </div>
+                    </div>
+                    <div class="row ">
+                        <div class="mb-3 col ">
+                            <label for="conta-banco " class="col-form-label ">Conta:</label>
+                            <select type="select" class="form-control form-select " id="conta-banco " formControlName="conta">
+                              <option selected>Selecione</option>
+                              <!-- <option *ngFor="let ls of listaCB" value="{{ls.nome}}">{{ls.nome}} - {{ls.banco}}</option> -->
+                            </select>
+                        </div>
+                        <div class="mb-3 col ">
+                            <label for="conta-tipo " class="col-form-label ">Categoria:</label>
+                            <select type="select " class="form-control form-select " id="conta-tipo " formControlName="categoria">
+                              <option selected>Selecione</option>
+                              <option>Alimentação</option>
+                              <option>Saúde</option>
+                              <option>Educação</option>
+                              <option>Transporte</option>
+                            </select>
+                        </div>
+                    </div>
+                </form>
+                <div class="conta-opcoes ">
+                    <a class="conta-opc-despesa">Despesas</a>
+                    <a class="conta-opc-receita">Receitas</a>
+                    <a class="conta-opc-transacao">Transações</a>
+                </div>
+            </div>
+            <div class="modal-footer ">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Salvar</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!-- MODAL CADASTRO CARTAO DE CREDITO -->
 <div id="modal" class="modal fade modal-fullscreen-md-down" id="modalCartao" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -21,7 +129,15 @@
                             <input type="text " class="form-control " id="conta-name " formControlName="limite" maxlength="15">
                         </div>
                         <div class="mb-3 col dropdown">
-                            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                            <label for="conta-name " class="col-form-label">Bandeira:</label>
+                            <select class="form-select" aria-label="Default select example" formControlName="bandeira">
+                              <option selected>Selecione</option>
+                              <option value="MasterCard">Master</option>
+                              <option value="visa">Visa</option>
+                              <option value="hipercard">HiperCard</option>
+                              <option value="amex">Amex</option>
+                            </select>
+                            <!-- <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                                   Bandeira
                                   <label value=""></label>
                                 </button>
@@ -35,7 +151,7 @@
                                 <li value="amex">
                                     <a class="dropdown-item center"><img class="iconBandeiraCC" src="/assets/images/bandeiraCartoes/americanexpress.png" /></a>
                                 </li>
-                            </ul>
+                            </ul> -->
                         </div>
                     </div>
                     <div class="row ">
@@ -66,9 +182,7 @@
                     <div class="row">
 
                     </div>
-
                 </form>
-
             </div>
             <div class="modal-footer ">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
