--- a/src/app/cartao-credito/cartao-credito.component.scss
+++ b/src/app/cartao-credito/cartao-credito.component.scss
@@ -1,6 +1,6 @@
 .btn-size-add-cc {
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    // height: 200px;
     font-size: 65px;
 }
 
@@ -32,4 +32,34 @@ a {
 
 .center {
     text-align: center;
+}
+
+.add-cc {
+    font-size: 60px;
+}
+
+.card-cc {
+    margin-top: 15px;
+    margin-left: 15px;
+    // margin-right: 15px;
+}
+
+.card {
+    cursor: pointer;
+    width: 100% !important;
+    // float: right;
+}
+
+.img-bandeira-cartao {
+    width: 50px;
+}
+
+.card-title {
+    font-weight: bold;
+    margin-top: 10px;
+    font-size: 16px;
+}
+
+.card-link {
+    text-decoration: none;
 }
